1. move logo in the mobile view to the top right 2. fix bug in ModalWindow - action button in case of accepting GDPR was trying to change sessionStorage - wrong. Changed to LocalStorage 3. fix bug with bar_gdpr - invisible for the user but still on screen - causing some problems when user tries to press scroll up button - gdpr now has display: none in case of confirmed gdpr 4. refactor code in scrl_up_btn

--- a/src/style/components/nav_top.scss
+++ b/src/style/components/nav_top.scss
@@ -32,12 +32,19 @@
     margin-left: -4em;
     z-index: $mobile-menu-sgl-btn;
 }
+.nav-mobile > .logo {
+    position: fixed;
+    font-size: 2rem;
+    top: 0;
+    right: .8em;
+}
 .menu-open {
     display: none;
 }
 .menu-btn {
     position: fixed;
     display: flex;
+    cursor: pointer;
     align-items: center;
     justify-content: center;
     top: 50%;
@@ -213,7 +220,7 @@
         background-color: transparent;
         z-index: $index_top_navabr;
     }
-    .logo {
+    .logo--dskt {
         display: inline;
     }
     .top-nav__items--dskt {
